fix(common)：修复刷日志和内存溢出的问题，同时移除告示牌类方块。